# Styling

./: CMakeLists.txt  README.md
quick/: Application.cpp  Application.h  CMakeLists.txt  icon.qrc  main.cpp  main.qml  qml.qrc
quick/qml/: main.qml
quick/qml/my/controls/: Button.qml  ButtonWithIcon.qml  ComboBox.qml  ProgressBar.qml  TabBar.qml  TabBarButtons.qml  TabBarWithExtraComponent.qml  TabButton.qml  Toggle.qml  qmldir
quick/qml/my/topbar/: TopIndicatorBar.qml  qmldir
style/: CMakeLists.txt  font.qrc
style/src/style/: Macro.h  MyColors.h  MyFonts.h  MyUiStyle.h
style/src/style/metric/base/: IButtonMetric.h  IButtonWithIconMetric.h  IComboBoxMetric.h  IProgressBarMetric.h  ITabBarMetric.h  IToggleMetric.h  ITopIndicatorBarMetric.h
style/src/style/palette/base/: IBaseViewPalette.h  IButtonPalette.h  IComboBoxPalette.h  IProgressBarPalette.h  ITabBarPalette.h  ITogglePalette.h  ITopIndicatorBarPalette.h
styleA/: CMakeLists.txt
styleA/src/styleA/: StyleA.cpp  StyleA.h
styleA/src/styleA/metric/styleA/: StyleAButtonMetric.h  StyleAButtonWithIconMetric.h  StyleAComboBoxMetric.h  StyleAProgressBarMetric.h  StyleATabBarMetric.h  StyleAToggleMetric.h  StyleATopIndicatorBarMetric.h
styleA/src/styleA/palette/styleA/: StyleABaseViewPalette.h  StyleAButtonPalette.h  StyleAComboBoxPalette.h  StyleAProgressBarPalette.h  StyleATabBarPalette.h  StyleATogglePalette.h  StyleATopIndicatorBarPalette.h
styleB/: CMakeLists.txt
styleB/src/styleB/: StyleB.cpp  StyleB.h
styleB/src/styleB/metric/styleB/: StyleBButtonMetric.h  StyleBButtonWithIconMetric.h  StyleBComboBoxMetric.h  StyleBProgressBarMetric.h  StyleBTabBarMetric.h  StyleBToggleMetric.h  StyleBTopIndicatorBarMetric.h
styleB/src/styleB/palette/styleB/: StyleBBaseViewPalette.h  StyleBButtonPalette.h  StyleBComboBoxPalette.h  StyleBProgressBarPalette.h  StyleBTabBarPalette.h  StyleBTogglePalette.h  StyleBTopIndicatorBarPalette.h
widgets/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
widgets/controls/: MyPushButton.cpp  MyPushButton.h
